@@ -18,7 +18,7 @@
 	left: 0px;
 	background: #eff8f8; 
 	margin-top:-2px; 
-	margin-left:18px;
+	margin-left:19px;
 }
 
 /* Navigator & Flyout menu Styles ------*/
